maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:34: error: overloaded method value - with alternatives:
  (x: Int)Int <and>
  (x: Char)Int <and>
  (x: Short)Int <and>
  (x: Byte)Int
 cannot be applied to (Unit)
        angleSum-=
                ^